# BlockChainChat

./: .gitignore  BlockChainDemo.pro  CMakeLists.txt  block.cpp  block.h  blockchain.cpp  blockchain.h  main.cpp  transactiondata.cpp  transactiondata.h
application/: CMakeLists.txt  application.cpp  application.h
blockchain/: CMakeLists.txt  block.cpp  block.h  blockchain.cpp  blockchain.h
connection/: CMakeLists.txt  cnx.cpp  cnx.h  connectionlist.cpp  connectionlist.h  connectionmanager.cpp  connectionmanager.h
util/: CMakeLists.txt  chatdata.cpp  chatdata.h  cnxdata.h  common.h  messagequeue.cpp  messagequeue.h  threadsafelist.cpp  threadsafelist.h  user.cpp  user.h  util.cpp  util.h
